Add gamification service.

--- a/mental_calc/multiplication/src/main/resources/application.properties
+++ b/mental_calc/multiplication/src/main/resources/application.properties
@@ -6,3 +6,6 @@ server.error.include-binding-errors=always
 spring.h2.console.enabled=true
 spring.jpa.show-sql=true
 spring.jackson.serialization.fail_on_empty_beans=false
+
+#Gamification URl
+service.gamification.url=http://localhost:8081
