Use event driven mode for application.

--- a/mental_calc/multiplication/src/main/resources/application.properties
+++ b/mental_calc/multiplication/src/main/resources/application.properties
@@ -4,8 +4,17 @@ server.error.include-binding-errors=always
 
 # Enable H2 db web console
 spring.h2.console.enabled=true
-spring.jpa.show-sql=true
+#create database in a file with server mode (so other instances can use the same file)
+spring.database.url=jdbc:h2:file:~/multiplication;DB_CLOSE_ON_EXIT=FALSE;AUTO_SERVER=true;
+
+#spring.jpa.show-sql=true
 spring.jackson.serialization.fail_on_empty_beans=false
 
 #Gamification URl
-service.gamification.url=http://localhost:8081
+#service.gamification.url=http://localhost:8081
+
+# Override default MQ properties
+amqp.exchange.attempts=attempts.topic
+
+#show declaration of exchanges, queues, bindings
+logging.level.org.springframework.amqp.rabbit.core.RabbitAdmin = DEBUG
