--- a/mental_calc/gamification/src/main/resources/application.properties
+++ b/mental_calc/gamification/src/main/resources/application.properties
@@ -1,8 +1,15 @@
 
 server.port=8081
 spring.h2.console.enabled=true
-# create a database file
-sprign.database.url=jdbc:h2:file:~/Temp/gamification;DB_CLOSE_ON_EXIT=FALSE
+#create database in a file with server mode (so other instances can use the same file)
+spring.database.url=jdbc:h2:file:~/gamification;DB_CLOSE_ON_EXIT=FALSE;AUTO_SERVER=true;
 # update the schema if needed
 spring.jpa.hibernate.ddl=auto=update
-spring.jpa.show-sql=true
+#spring.jpa.show-sql=true
+
+# AMQP configs
+amqp.exchange.attempts=attempts.topic
+amqp.queue.gamification=gamification.queue
+
+# AMQP logging
+logging.level.org.springframework.amqp.rabbit.core.RabbitAdmin=DEBUG
